# RecallyBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: config.py  main.py  models.py  notifier.py  storage.py
bot/sources/: imap_client.py  router.py
bot/sources/parsers/: base.py  dgis.py  google.py  html_utils.py  yandex.py
deploy/: review-bot.service
tests/: test_notifier.py  test_parsers.py  test_watchdog.py
tests/fixtures/: dgis_review_1.eml  dgis_review_negative_1.eml  yandex_digest_3.eml  yandex_digest_5.eml  yandex_review_1.eml
