[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "review-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "imap-tools>=1.7.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
